Testando implementacao de BTG Offshore e Jefferies

--- a/.env
+++ b/.env
@@ -24,3 +24,4 @@ TOKEN_ENC_KEY=someloginsecretkeythatshouldbesecret==
 # Django
 DJANGO_SECRET_KEY=dev-secret-key-change-in-production
 MONGO_DB_NAME=platform_db
+TIMEZONE=America/Sao_Paulo
