--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,8 @@ services:
     ports:
       - "4444:4444"
       - "7900:7900" 
+    volumes:
+      - ${USERPROFILE}/Downloads:/downloads
     networks:
       - scrape-net
 
