--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,56 @@
-# Mongo (Local - Docker)
-#MONGO_USER=admin
-#MONGO_PASS=CHANGE_ME
-#MONGO_URI=mongodb://admin:CHANGE_ME@mongo:27017
+# ============================================================================
+# Beehus - Example environment file (single source)
+# Copy to .env and adjust values for your environment.
+# ============================================================================
 
-# Mongo (Atlas)
-MONGO_URI=mongodb+srv://<user>:<password>@<cluster>.mongodb.net/<dbname>?retryWrites=true&w=majority
-MONGO_USER=CHANGE_ME
+# --- Infrastructure ----------------------------------------------------------
+MONGO_USER=admin
 MONGO_PASS=CHANGE_ME
-MONGO_DB_NAME=beehus
+MONGO_URI=mongodb://admin:CHANGE_ME@mongo:27017
+MONGO_DB_NAME=platform_db
 
-# RabbitMQ
-RABBITMQ_USER=beehus
-RABBITMQ_PASS=CHANGE_ME
-RABBITMQ_URL=amqp://beehus:CHANGE_ME@rabbitmq:5672/
+RABBITMQ_USER=guest
+RABBITMQ_PASS=guest
+RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672//
 
-# Redis
 REDIS_URL=redis://redis:6379/0
 
-# Selenium
-SELENIUM_REMOTE_URL=http://selenium-hub:4444/wd/hub
-SELENIUM_NODE_COUNT=5
-SELENIUM_NODE_MAX_SESSIONS=1
-SELENIUM_MAX_SLOTS=5
-
-# Security
-# Generate with: python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
-TOKEN_ENC_KEY=CHANGE_ME
-
-# Django
-DJANGO_SECRET_KEY=CHANGE_ME
-
-# CORS (comma-separated, for production)
-CORS_ORIGINS=https://beehus.placestecnologia.com.br
-
-# Downloads
+# Host-side shared downloads folder mounted into containers as /downloads.
 DOWNLOADS_DIR=./downloads
 
-# App
-CORE_ORCHESTRATOR_URL=http://core-orchestrator:8001
-TIMEZONE=America/Sao_Paulo
+# --- Selenium / Runtime ------------------------------------------------------
+SELENIUM_REMOTE_URL=http://selenium-hub:4444/wd/hub
+VNC_URL_BASE=http://localhost
+SELENIUM_MAX_SLOTS=5
+SELENIUM_NODE_COUNT=2
+SELENIUM_NODE_MAX_SESSIONS=1
+
+# --- Security / Auth ---------------------------------------------------------
+JWT_SECRET_KEY=CHANGE_ME_STRONG_SECRET
+JWT_ACCESS_TOKEN_EXPIRE_MINUTES=60
+JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
+# Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+DATABASE_ENCRYPTION_KEY=CHANGE_ME_FERNET_KEY
+
+# Optional token encryption key used by app.console.main
+TOKEN_ENC_KEY=CHANGE_ME_TOKEN_ENC_KEY
+
+# --- Admin bootstrap ---------------------------------------------------------
+ADMIN_EMAIL=admin@beehus.local
+ADMIN_PASSWORD=CHANGE_ME
+ADMIN_FULL_NAME=Admin User
+
+# --- Email / Invitation ------------------------------------------------------
+FRONTEND_URL=http://localhost:5173
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM_EMAIL=
+SMTP_FROM_NAME=Beehus Platform
+SMTP_USE_TLS=true
+
+# --- Frontend (dev container) ------------------------------------------------
+VITE_API_URL=http://localhost:8000
+VITE_VNC_URL_BASE=http://localhost
+VITE_VNC_PASSWORD=secret
