chore: sync local changes to remote

--- a/.env.example
+++ b/.env.example
@@ -32,8 +32,9 @@ JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 # Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
 DATABASE_ENCRYPTION_KEY=CHANGE_ME_FERNET_KEY
 
-# Optional token encryption key used by app.console.main
-TOKEN_ENC_KEY=CHANGE_ME_TOKEN_ENC_KEY
+# Required token encryption key used by app.console.main (must be valid Fernet key)
+# Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+TOKEN_ENC_KEY=CHANGE_ME_FERNET_KEY
 
 # --- Admin bootstrap ---------------------------------------------------------
 ADMIN_EMAIL=admin@beehus.local
