--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -15,7 +15,7 @@ services:
 
   # Enable reload + bind mount for local development
   app-console:
-    command: uvicorn app.console.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.console.main:app --host 0.0.0.0 --port 8000
     volumes:
       - .:/app
 
